Update Docker and Kubernetes configurations for improved paths and command handling
- Modified .dockerignore to include huggingface_cache.
- Updated docker-compose.yaml to specify volume mapping for local development.
- Changed Dockerfile to set the working directory to /home and adjusted the command to run the main script.
- Refactored generate_job.py to allow command specification in the job template.
- Adjusted main.py to use HF_LOCAL_STORAGE directly for path construction.
- Updated Kubernetes template to reflect new command structure and environment variable usage.

--- a/configs/template/kubernetes.yaml
+++ b/configs/template/kubernetes.yaml
@@ -6,6 +6,7 @@ k8s_user_home: '/rsrch5/home/biostatistics/cgu3'
 k8s_gpu_pvc: cgu3-gpu-home
 image: springlight123/finetune:latest
 gpu_type: null # NVIDIA-H100-80GB-HBM3
+command: ["python", "llm_tuning/main.py"]
 output: kube_jobs/train.yaml
 # mount
 hf_local_storage: huggingface_cache
